test_regress/t/t_implements_new_bad.out
%Error: t/t_implements_new_bad.v:13:11: Illegal to call 'new' using an abstract virtual class 'Icls' (IEEE 1800-2023 8.21)
                                      : ... note: In instance 't'
   13 |       c = new;   
      |           ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
